--- a/Models/SpeechRepresentation/2024.10.31_DC-Spin.md
+++ b/Models/SpeechRepresentation/2024.10.31_DC-Spin.md
@@ -56,14 +56,14 @@ SLM has two main research directions: (1) LM architecture and training and (2) s
 Since directly taking raw audio waveform as input to an SLM is infeasible, tokenizing speech into text-like discrete units has become an essential component of recent SLMs.
 We define four key qualifications for a good speech tokenizer inspired by prior studies.
 First, the tokens should contain strong phonetic or semantic information so that the SLM can use the content of speech to perform ASR and SLU ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md)).
-Second, the tokens should retain acoustic details for being resynthesized into speech for generative tasks like TTS and speech-to-speech translation ([Lee et al. (2021)](../S2ST/2021.07.12_Direct_Speech-to-Speech_Translation_with_Discrete_Units.md); [SpeechTokenizer (2023)](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md); [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md)).
-Third, the tokenizer should be robust to perturbations like additive noise, reverberation, and speaker change because the perturbations are irrelevant to how an SLM understands human speech and language ([Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md); [NAST (2024)](../Speech_Neural_Codec/2024.06.16_NAST.md)).
+Second, the tokens should retain acoustic details for being resynthesized into speech for generative tasks like TTS and speech-to-speech translation ([Lee et al. (2021)](../S2ST/2021.07.12_Direct_Speech-to-Speech_Translation_with_Discrete_Units.md); [SpeechTokenizer (2023)](../SpeechCodec/2023.08.31_SpeechTokenizer.md); [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md)).
+Third, the tokenizer should be robust to perturbations like additive noise, reverberation, and speaker change because the perturbations are irrelevant to how an SLM understands human speech and language ([Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md); [NAST (2024)](2024.06.16_NAST.md)).
 Fourth, the tokenizer should be lightweight and fast, supporting real-time interaction between users and SLMs.
 Hence, this paper tries to answer the following question:
 ***how to build and evaluate a good speech tokenizer for spoken language models that satisfies these key qualifications?***
 
-We simplify the setup of this paper by training a unit-based speech LM (uLM) ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md)) and a Hifi-GAN unit-to-speech synthesizer ([HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md); [Polyak et al. (2021)](../TTS3_Vocoder/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
-This setup is commonly used in SLM studies and applications ([VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md); [NAST (2024)](../Speech_Neural_Codec/2024.06.16_NAST.md); [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md)), which is an ideal proxy for more advanced SLMs.
+We simplify the setup of this paper by training a unit-based speech LM (uLM) ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md)) and a Hifi-GAN unit-to-speech synthesizer ([HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md); [Polyak et al. (2021)](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
+This setup is commonly used in SLM studies and applications ([VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md); [NAST (2024)](2024.06.16_NAST.md); [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md)), which is an ideal proxy for more advanced SLMs.
 uLMs are decoder-only Transformer LMs ([Transformer (2017)](../_Transformer/2017.06.12_Transformer.md)) and trained with the next-token prediction objective on speech tokens.
 uLMs can perform zero-shot tasks by estimating the probability of utterances, including detecting real spoken words and determining correct syntactic structures ([ZeroSpeech (2021)](../../Evaluations/2020.11.23_ZeroSpeech.md)), and can be fine-tuned for ASR.
 Moreover, we train Hifi-GANs to convert tokens to audio and quantify the intelligibility of the resynthesized speech to simulate speech generation with SLMs.
@@ -71,7 +71,7 @@ With uLM and resynthesis, we can examine speech tokenizers on the first two requ
 Next, we follow [Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md) to quantify the robustness by comparing the extracted tokens between clean and perturbed speech.
 Finally, we measure the inference speed of offline and streaming tokenization.
 
-After defining the goals and evaluation pipelines, we propose ***Double-Codebook Spin (DC-Spin)*** by extending speaker-invariant clustering (Spin) with an auxiliary codebook to extract better speech units, where Spin is a self-supervised fine-tuning method for capturing phonetic units via online clustering and speaker-invariant swapped prediction ([Spin (2023)](../Speech_Representaion/2023.05.18_Spin.md)).
+After defining the goals and evaluation pipelines, we propose ***Double-Codebook Spin (DC-Spin)*** by extending speaker-invariant clustering (Spin) with an auxiliary codebook to extract better speech units, where Spin is a self-supervised fine-tuning method for capturing phonetic units via online clustering and speaker-invariant swapped prediction ([Spin (2023)](2023.05.18_Spin.md)).
 To further boost robustness and token quality, we propose pre-training the Hidden-unit BERT (HuBERT) self-supervised speech encoder with Spin codeword units as a better initialization for ***DC-Spin*** ([HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md)), denoted as ***SpinHuBERT***.
 The contributions of this paper are listed as follows:
 
@@ -89,7 +89,7 @@ The two main approaches to integrating speech into LMs are adaptor and token-bas
 (Terms "token" and "unit" are used interchangeably in this paper, indicating discrete speech units.)
 Because of the recent advancements in LLMs, researchers connect speech encoders and text-based LMs through adaptors ([Qwen-Audio (2023)](../SpeechLM/2023.11.14_Qwen-Audio.md); [SLAM-ASR (2024)](../ASR/2024.02.13_SLAM-ASR.md); [SALMONN (2023)](../SpeechLM/2023.10.20_SALMONN.md)), allowing speech understanding and ASR but requiring a more sophisticated design for speech generation ([LLaMA3 (2024)](../TextLM/2024.07.31_LLaMA3.md)).
 In contrast, a more common approach, which is the main focus of this paper, is to tokenize speech to serve as both input and output of SLMs ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md); [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md); [VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md)).
-Under this setup, SLMs treat audio waveforms as text-like tokens, allowing SLMs to process speech and text jointly ([SpiRit-LM (2024)](../SpeechLM/2024.02.08_SpiRit-LM.md)) and to generate speech by synthesizing tokens into audio ([Polyak et al. (2021)](../TTS3_Vocoder/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
+Under this setup, SLMs treat audio waveforms as text-like tokens, allowing SLMs to process speech and text jointly ([SpiRit-LM (2024)](../SpeechLM/2024.02.08_SpiRit-LM.md)) and to generate speech by synthesizing tokens into audio ([Polyak et al. (2021)](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
 
 In [GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md), SLMs are trained with unlabeled speech tokens to discover the spoken content, which can be evaluated with zero-shot tasks in ([ZeroSpeech (2021)](../../Evaluations/2020.11.23_ZeroSpeech.md)).
 This concept allows an SLM to be fine-tuned with paired speech-text data for ASR, TTS, and SLU ([VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md)).
@@ -100,24 +100,24 @@ Because SLMs simultaneously understand and generate speech, and the speech token
 
 SSL is introduced to leverage large unlabeled audio datasets to pre-train speech encoders, mitigating the need for extensive human labeling ([Survey by Mohamed et al. (2022)](../../Surveys/2022.05.21_Self-Supervised_Speech_Representation_Learning__A_Review/Main.md)).
 SSL models are trained to predict pseudo labels given a partial speech utterance.
-Pseudo targets could be Mel spectrograms ([APC (2019)](../SpeechRepresentation/2019.04.05_APC.md); [TERA (2020)](../Speech_Representaion/2020.07.12_TERA.md)), vector-quantized features ([Wav2Vec2.0 (2020)](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md); [Best-RQ (2022)](../Speech_Representaion/2022.02.03_Best-RQ.md)), or an exponential average of the model itself ([Data2Vec (2022)](../Speech_Representaion/2022.02.07_Data2Vec.md); [DinoSR (2023)](../Speech_Representaion/2023.05.17_DinoSR.md)).
+Pseudo targets could be Mel spectrograms ([APC (2019)](../SpeechRepresentation/2019.04.05_APC.md); [TERA (2020)](2020.07.12_TERA.md)), vector-quantized features ([Wav2Vec2.0 (2020)](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md); [Best-RQ (2022)](../SpeechRepresentation/2022.02.03_Best-RQ.md)), or an exponential average of the model itself ([Data2Vec (2022)](../SpeechRepresentation/2022.02.07_Data2Vec.md); [DinoSR (2023)](2022.02.07_Data2Vec.md))
 Pre-trained SSL models offer good initialization for speech processing tasks ([SUPERB (2024)](../../Evaluations/2024.04.15_SUPERB.md)).
-Moreover, evidence has shown that speech SSL models excel at extracting phonetic representations ([Pasad et al. (2021)](../Speech_Representaion/2021.07.10_Layer-wise_Analysis_of_a_Self-Supervised_Speech_Representation_Model.md); [Spin (2023)](../Speech_Representaion/2023.05.18_Spin.md); [Choi et al. (2024)](../_Full/2024.06.12_Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)), so quantizing SSL hidden layer embeddings with K-means clustering is widely adopted to tokenize speech ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md); [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md); [VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md)).
-[Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md) and [NAST (2024)](../Speech_Neural_Codec/2024.06.16_NAST.md) further fine-tune SSL encoders for robust speech tokenizers.
+Moreover, evidence has shown that speech SSL models excel at extracting phonetic representations ([Pasad et al. (2021)](2021.07.10_Layer-wise_Analysis_of_a_Self-Supervised_Speech_Representation_Model.md); [Spin (2023)](../SpeechRepresentation/2023.05.18_Spin.md); [Choi et al. (2024)](../_Full/2024.06.12_Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)), so quantizing SSL hidden layer embeddings with K-means clustering is widely adopted to tokenize speech ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md); [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md); [VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md)).
+[Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md) and [NAST (2024)](2024.06.16_NAST.md) further fine-tune SSL encoders for robust speech tokenizers.
 
 **Neural Audio Codec**
 
-Neural network-based codecs compress audio into compact units and reconstruct high-fidelity signals from the units ([SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md); [AudioDec (2023)](../Speech_Neural_Codec/2023.05.26_AudioDec.md)).
+Neural network-based codecs compress audio into compact units and reconstruct high-fidelity signals from the units ([SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md); [AudioDec (2023)](../SpeechCodec/2023.05.26_AudioDec.md)).
 These models resemble autoencoders and comprise an encoder, a quantization module, and a decoder.
-A commonly used technique for the quantization module is residual vector quantization (RVQ) ([SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md)).
+A commonly used technique for the quantization module is residual vector quantization (RVQ) ([SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md)).
 RVQ has multiple codebooks, each quantizing the residual features computed from the previous codebook, making the first few codebooks preserve more critical information for reconstructing audio waveforms.
-[SpeechTokenizer (2023)](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md) proposes SpeechTokenizer by enforcing the first codebook to capture phonetic units by distilling knowledge from a pre-trained SSL teacher, but the teacher bounds the performance.
+[SpeechTokenizer (2023)](../SpeechCodec/2023.08.31_SpeechTokenizer.md) proposes SpeechTokenizer by enforcing the first codebook to capture phonetic units by distilling knowledge from a pre-trained SSL teacher, but the teacher bounds the performance.
 One of the benefits of neural codecs is that the model itself has an audio resynthesis module, i.e., the decoder.
 Still, SSL-based tokenizers can resynthesize speech with a separate vocoder.
 
 Besides the open-source tokenizers, closed models like USM ([AudioPaLM (2023)](../SpeechLM/2023.06.22_AudioPaLM.md)) are claimed to be powerful for SLMs, but these tokenizers are difficult to reproduce or compare because the details remain unrevealed.
 In contrast, this paper aims to offer insights into designing tokenizers and shares all details for future studies.
-Additionally, some works categorize speech tokens into semantic and acoustic tokens for understanding and generative tasks, respectively ([SpeechTokenizer (2023)](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md); [AudioLM (2022)](../SpeechLM/2022.09.07_AudioLM.md)).
+Additionally, some works categorize speech tokens into semantic and acoustic tokens for understanding and generative tasks, respectively ([SpeechTokenizer (2023)](../SpeechCodec/2023.08.31_SpeechTokenizer.md); [AudioLM (2022)](../SpeechLM/2022.09.07_AudioLM.md)).
 However, we will demonstrate that a single type of speech token is sufficient to perform well on both tasks.
 
 ## 3.Methodology: 方法
@@ -126,15 +126,15 @@ However, we will demonstrate that a single type of speech token is sufficient to
 
 **Speaker-invariant Clustering (Spin)**
 
-Spin is a self-supervised fine-tuning approach inspired by [SwAV (2020)](../CV/2020.06.17_SwAV.md) and captures speaker-invariant content in speech signals through online clustering and swapped prediction ([Spin (2023)](../Speech_Representaion/2023.05.18_Spin.md)).
+Spin is a self-supervised fine-tuning approach inspired by [SwAV (2020)](../CV/2020.06.17_SwAV.md) and captures speaker-invariant content in speech signals through online clustering and swapped prediction ([Spin (2023)](2023.05.18_Spin.md)).
 During training, each utterance is perturbed to sound like a different speaker but with the same content by randomly scaling the F0 and formant frequencies.
 Both utterances are fed to a pre-trained SSL encoder, and the frame-level output of each utterance is transformed into a sequence of probability distributions with a learnable codebook.
 The distributions are smoothed to enforce full codebook usage and serve as the learning target.
 Finally, the model performs swapped prediction by minimizing the cross-entropy loss between the original codeword distribution and the smoothed targets from the perturbed output and vice versa.
 
 Spin efficiently improves SSL encoders in content-related problems like ASR and phoneme recognition (PR).
-[Robust-Spin (R-Spin) (2023)](../Speech_Representaion/2023.11.15_R-Spin.md) extends Spin for robust speech recognition but requires more complicated training stages and implementation.
-Although [R-Spin (2023)](../Speech_Representaion/2023.11.15_R-Spin.md) have shown that discrete units produced by Spin codebooks are closely aligned with phonemes and characters, the applications of these tokens remain undiscovered.
+[Robust-Spin (R-Spin) (2023)](2023.11.15_R-Spin.md) extends Spin for robust speech recognition but requires more complicated training stages and implementation.
+Although [R-Spin (2023)](2023.11.15_R-Spin.md) have shown that discrete units produced by Spin codebooks are closely aligned with phonemes and characters, the applications of these tokens remain undiscovered.
 
 **Hidden-unit BERT (HuBERT)**
 
@@ -158,7 +158,7 @@ Motivated by the above reasons, this paper explores the possibilities of tokeniz
 First, we fine-tune HuBERT Base with different Spin codebook sizes and use the codeword IDs as discrete units to perform zero-shot spoken LM tasks, where the experimental setup can be found in Section~\ref{subsec:exp-setup}.
 As shown in Figure~\ref{fig:method-codebook-slm}, ideal codebook sizes are between 200 and 500.
 Note that the codebook size should be large enough for speech resynthesis since low bitrate degrades resynthesis quality (Appendix~\ref{sec:app-resynth}).
-Moreover, [Spin (2023)](../Speech_Representaion/2023.05.18_Spin.md) found larger Spin codebooks capture better phonetic representations.
+Moreover, [Spin (2023)](2023.05.18_Spin.md) found larger Spin codebooks capture better phonetic representations.
 The contradictory properties motivate us to develop methods to obtain a small but high-quality codebook.
 
 ***Double-Codebook Spin (DC-Spin)***
@@ -178,10 +178,10 @@ CTC fine-tuning can be applied before or during ***DC-Spin*** fine-tuning, but w
 
 Spin can be applied to any pre-trained speech encoder, but the fine-tuned performance depends on the encoder's quality.
 In Table~\ref{tab:ssl-pt-compare}, HuBERT and data2vec are superior to other methods, even though all models are fine-tuned with the same ***DC-Spin*** objective.
-HuBERT is slightly inferior to data2vec on two tasks, but data2vec is more unstable because the learning target is an exponential moving average of itself ([Data2Vec (2022)](../Speech_Representaion/2022.02.07_Data2Vec.md)).
+HuBERT is slightly inferior to data2vec on two tasks, but data2vec is more unstable because the learning target is an exponential moving average of itself ([Data2Vec (2022)](2022.02.07_Data2Vec.md)).
 In contrast, HuBERT has fixed learning targets, which can be replaced with better pseudo labels.
 The above findings have led us to propose ***SpinHuBERT*** by training HuBERT models with labels Spin units to better initialize ***DC-Spin***.
-Because of the speaker-invariant nature of Spin, [Spin (2023)](../Speech_Representaion/2023.05.18_Spin.md) and [R-Spin (2023)](../Speech_Representaion/2023.11.15_R-Spin.md) have shown that discrete units derived from Spin codebooks are closer to phonetic units than HuBERT K-means units.
+Because of the speaker-invariant nature of Spin, [Spin (2023)](2023.05.18_Spin.md) and [R-Spin (2023)](2023.11.15_R-Spin.md) have shown that discrete units derived from Spin codebooks are closer to phonetic units than HuBERT K-means units.
 Following this observation, ***SpinHuBERT*** is expected to extract better phonetic representations.
 
 Summarizing the proposed ***DC-Spin*** and ***SpinHuBERT***, the training pipeline is shown in Figure~\ref{fig:framwork}.
@@ -195,8 +195,8 @@ Stage (III) fine-tunes the encoder with the proposed ***DC-Spin*** objective to 
 
 **Baseline Tokenizers**
 
-We adopt EnCodec 24kHz ([EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md)) and SpeechTokenizer ([SpeechTokenizer (2023)](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md),  [Github](https://github.com/ZhangXInFD/SpeechTokenizer)) as the neural audio codec baselines.
-For SSL-based methods, we consider K-means clustering, augmentation invariant discrete representation ([Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md)), and [Noise Aware Speech Tokenization (NAST)](../Speech_Neural_Codec/2024.06.16_NAST.md) ([Github](https://github.com/ShovalMessica/NAST)), where the second and third methods are designed specifically for SLM by training with perturbation-invariant objectives.
+We adopt EnCodec 24kHz ([EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md)) and SpeechTokenizer ([SpeechTokenizer (2023)](../SpeechCodec/2023.08.31_SpeechTokenizer.md),  [Github](https://github.com/ZhangXInFD/SpeechTokenizer)) as the neural audio codec baselines.
+For SSL-based methods, we consider K-means clustering, augmentation invariant discrete representation ([Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md)), and [Noise Aware Speech Tokenization (NAST)](2024.06.16_NAST.md) ([Github](https://github.com/ShovalMessica/NAST)), where the second and third methods are designed specifically for SLM by training with perturbation-invariant objectives.
 An SSL-based tokenizer using K-means clustering with $K$ units is denoted as "K-means\textsubscript{$K$}."
 
 **Self-supervised Pre-training**
@@ -216,7 +216,7 @@ See Appendix~\ref{subsec:app-impl-asr-pr} for more information.
 
 **Spin \& ***DC-Spin*** Fine-tuning**
 
-We follow [Spin (2023)](../Speech_Representaion/2023.05.18_Spin.md) and reimplement Spin in [fairseq (2019)](../Toolkits/2019.04.01_FAIRSeq.md).
+We follow [Spin (2023)](2023.05.18_Spin.md) and reimplement Spin in [fairseq (2019)](../Toolkits/2019.04.01_FAIRSeq.md).
 We fine-tune SSL models with unlabeled data from LibriSpeech on a single NVIDIA 32GB V100 GPU (see Appendix~\ref{subsec:app-impl-spin}).
 "Spin\textsubscript{$K$}" denotes Spin with a codebook size of $K$.
 ***DC-Spin*** with primary and auxiliary codebook sizes of $K_1$ and $K_2$ is denoted as "DC-Spin\textsubscript{$K_1$,$K_2$}."
@@ -232,7 +232,7 @@ See Appendix~\ref{subsec:app-impl-slm} for more details.
 
 **Speech Resynthesis**
 
-We use the [Expresso dataset (2023)](../../Datasets/2023.08.10_Expresso.md) to train and evaluate unit-to-speech Hifi-GAN vocoders ([HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md); [Polyak et al. (2021)](../TTS3_Vocoder/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
+We use the [Expresso dataset (2023)](../../Datasets/2023.08.10_Expresso.md) to train and evaluate unit-to-speech Hifi-GAN vocoders ([HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md); [Polyak et al. (2021)](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
 The input includes a sequence of tokenized speech units, a speaker ID, and a style ID.
 After training, we resynthesize all utterances in the dev and test sets with the original speaker and style IDs.
 
@@ -358,7 +358,7 @@ This metric measures the difficulty of modeling speech tokens.\\
 - **Phonetic ABX**: ABX error rate quantifies how well a tokenizer can distinguish phonemes ([ABX (2016)](../../Evaluations/ABX.md); [ZeroSpeech (2021)](../../Evaluations/2020.11.23_ZeroSpeech.md)).
 - **Phone Normalized Mutual Information (PNMI)**: Proposed by [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md), PNMI computes the mutual information between the speech tokens and phoneme alignments.
 Thereby, higher values imply better alignment with the underlying phoneme distribution.\\
-- **Character Normalized Mutual Information (CNMI)**: Similar to PNMI, CNMI compares tokens with character alignments ([R-Spin (2023)](../Speech_Representaion/2023.11.15_R-Spin.md)).
+- **Character Normalized Mutual Information (CNMI)**: Similar to PNMI, CNMI compares tokens with character alignments ([R-Spin (2023)](2023.11.15_R-Spin.md)).
 We use UnitY2 to compute alignments ([Seamless (2023)](../_Basis/2023.12.08_Seamless.md), [Github](https://github.com/facebookresearch/seamless_communication/blob/main/docs/m4t/unity2_aligner_README.md)).
 
 Using 33 tokenizers with 50Hz framerate and 500 units, we compute the Pearson correlation coefficients between proxy and downstream metrics in Figure~\ref{fig:exp-task-corr-part}.
@@ -392,7 +392,7 @@ TTS and speech-to-speech translation are also potential applications.
 The experiments of this paper utilize publicly available datasets and code for better reproducibility.
 First, we use public datasets for model training and evaluation as described in Section~\ref{subsec:exp-setup} and Appendix~\ref{sec:app-impl}.
 Second, the baseline speech tokenizers and SSL speech encoders are open models that can be accessed easily, as listed in Appendix~\ref{subsec:app-impl-baseline}.
-Third, the training code of Spin and ***DC-Spin*** is first adopted from the official code in [Spin (2023)](../Speech_Representaion/2023.05.18_Spin.md) and reimplemented in the open-source [fairseq (2019)](../Toolkits/2019.04.01_FAIRSeq.md) library.
+Third, the training code of Spin and ***DC-Spin*** is first adopted from the official code in [Spin (2023)](2023.05.18_Spin.md) and reimplemented in the open-source [fairseq (2019)](../Toolkits/2019.04.01_FAIRSeq.md) library.
 We also demonstrate that our implementation matches the original performance in Appendix~\ref{subsec:app-impl-spin}.
 Fourth, we follow the original implementation for the evaluation tasks to ensure a fair comparison with prior works.
 For reference, we provide the source of the code and data we use in footnotes throughout the paper.
