--- a/Models/SpeechCodec/2024.11.27_TS3-Codec.md
+++ b/Models/SpeechCodec/2024.11.27_TS3-Codec.md
@@ -45,6 +45,29 @@ Furthermore, it significantly outperforms the convolution-based codec when using
 
 ## 1·Introduction: 引言
 
+Neural audio codec (NAC) is a technique to compress audio signals into a sequence of discretized codes for efficient data storage and transmission \cite{kim2024neural, wu-etal-2024-codec, shi2024espnet, wu2024codec, mousavi2024dasb}.
+More recently, NAC has also gained significant attention
+as a key technology for speech language modeling (SLM) \cite{audiolm,wang2023neural,wang2024speechx}.
+By converting continuous audio into discrete codes, large language modeling (LLM) techniques—already highly successful in text processing—is able to be applied to versatile speech processing \cite{wu2024towards}.
+
+Numerous high-performance NACs have been proposed\footnote{\url{https://github.com/ga642381/speech-trident}}, addressing various aspects, e.g. better audio quality, bitrate efficiency, and low computational cost.
+Most models rely on convolutional layers as the dominant architecture, with only a few \cite{ji2024wavtokenizer, defossez2024moshi} incorporating transformers (or self-attention mechanism) \cite{vaswani2017attention} as intermediate layers within the convolutional encoder-decoder framework.
+However, the performance of a purely transformer-based and convolution-free architecture in NACs remains unexplored.
+This study aims to fill the existing gap by developing a NAC exclusively based on transformer models. It leverages the benefits of transformers, such as simplicity in model design and enhanced computational efficiency when compared to convolution-based models.
+
+When the NAC is used as the token representation for SLMs, the following properties are particularly important.
+
+- Streaming: Full-duplex communication, where users and machines can speak and respond simultaneously, is a popular and ongoing challenge in the SLM field \cite{defossez2024moshi,dGSLM}. To enable seamless real-time interactions, the codec must support streaming processing, allowing it to encode user speech and generate speech response with low latency.
+- Single codebook: A single codebook-based model is preferable to a multiple-codebook-based model, such as residual vector quantization (RVQ)~\cite{zeghidour2021soundstream, defossez2022high}, because the latter introduces additional complexity to the architecture of SLMs, such as the combination of auto-regressive and non-autoregressive models \cite{wang2023neural}, the temporal and depth transformers \cite{yu2023megabyte,yang2023uniaudio}, etc.
+- Low computation: Low-computation NACs enable faster encoding and decoding, reducing computational demands and leaving more computation resources available for SLMs.
+- Low token rate: Long sequences generally make LLM training slow and unstable. Therefore, it is preferable to use low-token-rate NAC models for SLM.
+
+This paper introduces TS3-Codec (Transformer-Based Simple Streaming Single Codec), the first attempt to develop a convolution-free, transformer-only NAC.
+TS3-Codec consists of only a stack of transformer layers with a few linear layers, offering greater simplicity and expressiveness by fully eliminating convolution layers that require careful hyperparameter tuning and large computations.
+The proposed TS3-Codec offers several advantages, namely, streaming capability, low computational requirements, low bitrate, and a single codebook design while maintaining high audio quality.
+In the streaming setup, the proposed TS3-Codec delivers comparable or superior performance than convolution-based codecs with just 12\% of the computation and 77\% of bitrate.
+TS3-Codec also achieves significantly better audio quality when using the same computational resources.
+
 ## 2·Related Works: 相关工作
 
 ## 3·Methodology: 方法
