--- a/Models/SpeechCodec/2024.11.27_TS3-Codec.md
+++ b/Models/SpeechCodec/2024.11.27_TS3-Codec.md
@@ -70,6 +70,39 @@ TS3-Codec also achieves significantly better audio quality when using the same c
 
 ## 2·Related Works: 相关工作
 
+Neural audio codec models typically consist of an encoder, a vector quantization (VQ) module, and a decoder.
+The encoder downsamples the time-domain audio to extract frame-wise audio features, typically with a frame rate of 12.5–100 Hz.
+The vector quantization module — whether single-quantizer vector quantization \cite{van2017neural}, residual vector quantization (RVQ) \cite{zeghidour2021soundstream, defossez2022high}, or scalar quantization (SQ) \cite{mentzer2023finite} — converts each frame-wise audio feature into discrete tokens.
+These discrete tokens can be used for efficient transmission or as input for SLMs.
+Finally, the decoder reconstructs the time-domain audio signal from the discrete tokens.
+To meet the requirements of SLMs for real-time conversational agents with full-duplex mode, a suitable codec is better to support streaming, low computational complexity, a single codebook, and a low token rate.
+
+### Streaming
+
+Encodec \cite{defossez2022high} is one of the pioneers in achieving real-time, high-quality audio coding by utilizing a streaming encoder-decoder architecture with residual vector quantization.
+To enable full-duplex operation in SLMs, Mimi \cite{defossez2024moshi} is proposed as a streaming RVQ codec with a 12.5 Hz token rate.
+It employs techniques, e.g. semantic distillation, discriminator-only training without reconstruction loss, and the integration of transformer layers between the encoder and decoder backbone to enhance feature modeling.
+Mimi achieves a low bitrate of 1.1 kbps while maintaining very high speech quality.
+
+### Single codebook
+
+A single codebook-based model is preferable to a multiple-codebook-based model, because it offer the simplicity design of the SLMs.
+Multiple-codebook-based codecs (e.g. RVQ-based codec) compress speech into multiple streams of tokens. Unlike text tokens, which form a single stream, modeling multiple audio token streams requires a more complex model design for decoding. Though various decoding strategies have been proposed, including decoding different streams in separate steps \cite{audiolm,wang2023neural}, introducing delay patterns across various stream tokens \cite{copet2024simple}, and combining temporal and depth transformers for generation \cite{yu2023megabyte,yang2023uniaudio}, these multi-stream approaches obviously increase the complexity of model design. In contrast, single-stream codecs offer simple model design.
+
+TiCodec \cite{ren2024fewer} and SingleCodec \cite{li2024single} are designed to encode speech using fewer tokens by disentangling time-invariant global information (e.g., speaker timbre and acoustic environment) into a single utterance-level vector, while representing time-varying information (e.g., phonetic content) with a single stream of frame-level tokens.
+The time-invariant utterance embeddings and frame-level token sequences are then combined to reconstruct the audio.
+However, a limitation of these codecs is their reliance on global utterance-level features for decoding, which restricts their streaming capability.
+WavTokenizer \cite{ji2024wavtokenizer} employs several techniques, including codebook size optimization, k-means initialization for codebook embeddings, the Vocos decoder \cite{siuzdak2023vocos}, and training on 80,000 hours of data, to achieve high fidelity in a single-codebook low-bitrate codec.
+BigCodec \cite{xin2024bigcodec} achieves exceptionally high reconstruction quality at a low bitrate of 1.04 kbps by scaling the convolutional model size to 160M parameters, making it a strong convolutional baseline for our work.
+
+### Uniqueness and contributions of this work
+
+This paper presents the first transformer-only codec architecture designed for streaming, featuring low computational complexity and a simple model design.
+Previous works have utilized transformers \cite{defossez2024moshi,ji2024wavtokenizer} solely as intermediate layers within predominantly convolutional backbones for feature engineering.
+Furthermore, previous streaming codecs \cite{defossez2024moshi,defossez2022high,wu2023audiodec} rely on residual vector quantization (RVQ), and single-codebook codecs \cite{ren2024fewer,li2024single,ji2024wavtokenizer,xin2024bigcodec} have lacked a streaming design.
+Our work is the first to introduce a single-codebook codec specifically designed for streaming.
+This work is also the first to explore single codec designs with 65k and 130k codebook sizes.
+
 ## 3·Methodology: 方法
 
 ## 4·Experiments: 实验
