--- a/Models/SpeechCodec/2024.11.27_TS3-Codec.md
+++ b/Models/SpeechCodec/2024.11.27_TS3-Codec.md
@@ -153,6 +153,82 @@ This configuration yielded the best results in our preliminary experiments. Note
 
 ## 4·Experiments: 实验
 
+### Data: 数据
+
+We used Libri-light \cite{kahn2020libri}, which contains 60K hours of speech, to train the codec models.
+For evaluation, we used the `test-clean' subset of Librispeech \cite{panayotov2015librispeech}, which consists of 2620 utterances from 40 speakers.
+
+### Evaluation Metrics: 评价指标
+
+#### Complexity and the extracted tokens' property
+
+- Paras: The number of parameters of the codec model.
+- Multiply-Accumulate Operations (MACs): MACs refer to the fundamental computational operations in neural audio codec models. In this paper, we calculate MACs based on a 1-second audio utterance based on PyFlops\footnote{\url{https://github.com/sovrasov/flops-counter.pytorch/tree/master}}. For modules not supported by PyFlops, such as streaming transformers, we calculated them manually.
+- Bits Per Second (BPS): measures the number of bits transmitted per second. We used this metric to show the trade-off between transmitted audio quality and compression rate.
+- Token rate: A metric that indicates the number of tokens required for each second of encoded audio. It is an important measure for speech language modeling.
+- Frame rate: A metric that shows the number of frames needed to encode each second of audio.
+
+#### Intelligibility
+
+- Word Error Rate (WER): To evaluate the intelligibility of the reconstructed audio, we employed a HuBERT-based \cite{hsu2021hubert} speech recognition model\footnote{\small \url{https://huggingface.co/facebook/hubert-large-ls960-ft}} to calculate the word error rate (WER). All results are reported as WER percentages.
+- Short-Time Objective Intelligibility (STOI): assess speech intelligibility by comparing short-time temporal envelopes of clean and degraded speech signals, ranging between 0 and 1, where higher values mean better intelligibility.
+
+#### Distortion
+
+-  Mel Cepstral Distortion (MCD): MCD measures the difference between two mel-frequency cepstral coefficients (MFCCs) sequences. It is commonly employed in speech synthesis and voice conversion tasks to evaluate the quality of generated speech.  % to a target.
+- Perceptual Evaluation of Speech Quality (PESQ): PESQ assesses the quality of speech signals by comparing a degraded speech signal with a reference signal, providing a score that predicts human perception of speech quality, where higher values indicate better quality. We used the wide-band PESQ.
+
+#### Speaker similarity
+
+To evaluate the speaker similarity (SPK SIM), we used the WavLM-based speaker verification model\footnote{\url{https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker\_verification}} \cite{chen2022wavlm} to calculate the cosine similarity between original and reconstructed utterances.
+
+#### Naturalness
+
+We used UTMOS\footnote{\url{https://github.com/sarulab-speech/UTMOS22}} \cite{saeki2022utmos} to evaluate naturalness.
+UTMOS is a neural network-based metric that predicts the Mean Opinion Score (MOS)
+for the naturalness of speech by learning from pairs of human subjective scores and corresponding utterances, with scores ranging from 1 to 5.
+UTMOS is wildly used as a metric that is highly correlated with human preferences on codec reconstructed utterances \cite{shi2024espnet,ji2024wavtokenizer}.
+
+### Baselines
+
+#### Official checkpoints
+
+For the baselines, we included official checkpoints from current high-performing codec models as references.
+The comparison of these 6 codec models is shown in Table~\ref{tab:codec_compare}.
+
+- Encodec \cite{defossez2022high}: We used the default 24k Hz model\footnote{\url{https://github.com/facebookresearch/encodec}}, with a bitrate setting as 1.5 kbps, which aligns closely with our model's bitrate. During reconstruction, we first upsampled the utterance to 24 kHz, then performed reconstruction using Encodec, and finally downsampled it to obtain the reconstructed utterances at 16 kHz.
+- DAC \cite{kumar2024high}: We used the 24k Hz model\footnote{\url{https://github.com/descriptinc/descript-audio-codec}}, and adopted similar procedures as for Encodec.
+- SpeechTokenizer \cite{zhang2023speechtokenizer}: We used the speechtokenizer\_snake model\footnote{\url{https://github.com/ZhangXInFD/SpeechTokenizer}}. We got two bitrate settings, 1k and 0.5k bps, to align with our bitrate settings.
+- Mimi \cite{defossez2024moshi}: We used the official checkpoint\footnote{\url{https://huggingface.co/kyutai/mimi}} to obtain two bitrate settings: 1.1 kbps and 0.6875 kbps, which align with our model's bitrate settings.
+- BigCodec \cite{xin2024bigcodec}: The official checkpoint\footnote{\url{https://github.com/Aria-K-Alethia/BigCodec}} with a bitrate of 1.04k bps was used.
+- WavTokenizer \cite{ji2024wavtokenizer}: Two official checkpoints\footnote{\url{https://github.com/jishengpeng/WavTokenizer}}, WavTokenizer-large-600-24k-4096 (0.52k bps) and WavTokenizer-large-320-24k-4096 (0.975k bps) were used.
+
+#### Reproduced models based on official implementation
+
+Our primary baseline is BigCodec, as it is the current state-of-the-art single-codebook low-bps codec.
+We reproduced BigCodec based on its official implementation and further developed a streaming version (denoted as BigCodec-S)
+by replacing all the non-causal convolution operations with causal convolution operations, and removing the upsampling/downsampling operations at the snake activation function\footnote{Removing the upsampling/downsampling operations yielided slighlty better results compared to using causal upsampling/downsampling operations in the streaming setting.}.
+BigCodec-S was
+trained on the same datasets as TS3-Codec for a fair comparison.
+We conducted extensive hyperparameter tuning (e.g., codebook size, loss weights) on BigCodec-S.
+As a result,
+at a similar bitrate, BigCodec-S trained using only Libri-light outperformed
+Mimi, the current state-of-the-art RVQ-based streaming codec model, on the majority of evaluation metrics, making our baseline strong.
+
+### TS3-Codec model configuration
+
+We have trained several TS3-Codec models, (X1) - (X5), to fulfill different bitrates, as shown in Table~\ref{tab:tes_config}.
+For TS3-Codec (X1), (X3) and (X5), the codebook size is 65536, resulting in bitrates of 640 bps and 800 bps.
+For TS3-Codec (X2) and (X4), the codebook size is 131,072, resulting in lager bitrates of 680 bps and 850 bps.
+
+### Training configurations
+
+All models were trained on 16 NVIDIA V100 32G GPUs. For BigCodec-S, the utterance length was set to 2.5 seconds, randomly cropped from the original utterance, and the batch size was adjusted to maximize GPU memory usage for different sizes of BigCodec-S models. Similarly, for TS3-Codec, the utterance length was set to 10 seconds, randomly cropped from the original utterance, and the batch size was adjusted to optimize GPU memory for different TS3-Codec models. We employed AdamW \cite{loshchilov2017decoupled} as the optimizer, with the moving average coefficients $\beta_1$ and $\beta_2$ set to 0.8 and 0.9, respectively. A scheduled learning rate was used, linearly declining from 1e-4 to 1e-5 for BigCodec-S and from 2e-4 to 2e-5 for TS3-Codec. We performed 1k learning rate warmup steps, and all models were trained for 500k steps.
+
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
+
+This paper introduces TS3-Codec, the first transformer-only NAC model designed for streaming processing with low computational complexity and a single codebook.
+Compared to BigCodec, the state-of-the-art convolutional codec, TS3-Codec achieved similar or better performance with just 12\% of the computation and 77\% of the bitrate, and performed significantly better under similar computational settings.
+TS3-Codec sets a new direction for simple and efficient streaming NACs.
